style: fix unnecessary spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 main {
     background: #FFFFFF;
-    padding: 2em 2em;
+    padding: 2em;
     text-align: left;
     display: block;
     position: absolute;
@@ -18,7 +18,6 @@ main {
     right: 0px;
     bottom: 0px;
     margin: auto;
-    height: 100%;
 }
 
 main, #game {
